Fixed Github and Discord icons to correctly change colour when the dark mode is set.

--- a/frontend/themes/froniusvizualizer/styles.css
+++ b/frontend/themes/froniusvizualizer/styles.css
@@ -6,6 +6,10 @@ body, #outlet {
     margin: 0;
 }
 
+html[theme=dark] .footer-icon {
+    filter: invert(1);
+}
+
 html {
     --lumo-size-xl: 6rem;
     --yellow-50: #FFFBEF;
